Updated libs and code to fit java10