@@ -71,13 +71,13 @@ public final class RegistryReader {
 
     private static String readString(Preferences root, int hkey, String key, String value)
 	    throws IllegalArgumentException, IllegalAccessException, InvocationTargetException {
-	int[] handles = (int[]) regOpenKey.invoke(root, new Object[] { new Integer(hkey), toCstr(key),
-		new Integer(KEY_READ) });
+	int[] handles = (int[]) regOpenKey.invoke(root, new Object[] { Integer.valueOf(hkey), toCstr(key),
+		Integer.valueOf(KEY_READ) });
 	if (handles[1] != REG_SUCCESS) {
 	    return Control.EMPTY_STRING;
 	}
-	byte[] valb = (byte[]) regQueryValueEx.invoke(root, new Object[] { new Integer(handles[0]), toCstr(value) });
-	regCloseKey.invoke(root, new Object[] { new Integer(handles[0]) });
+	byte[] valb = (byte[]) regQueryValueEx.invoke(root, new Object[] { Integer.valueOf(handles[0]), toCstr(value) });
+	regCloseKey.invoke(root, new Object[] { Integer.valueOf(handles[0]) });
 	return (valb != null ? new String(valb).trim() : Control.EMPTY_STRING);
     }
 
